--- a/examples/moodle-fullstack/namespace1/cert.yaml
+++ b/examples/moodle-fullstack/namespace1/cert.yaml
@@ -2,21 +2,15 @@ apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
   name: moodle-cert
-  namespace: namespace1
 spec:
-  secretName: moodle-tls
+  secretName: moodle-cert
   issuerRef:
     name: moodle-issuer
     kind: ClusterIssuer
-  commonName: moodle1.net
   dnsNames:
   - www.moodle1.net
   acme:
     config:
-    - http01:
-        ingressClass: nginx
-      domains:
-      - moodle1.net
     - http01:
         ingress: moodle1
       domains:
