--- a/examples/moodle-fullstack/namespace1/issuer.yaml
+++ b/examples/moodle-fullstack/namespace1/issuer.yaml
@@ -8,6 +8,5 @@ spec:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource used to store the account's private key.
-      name: account-key
-    # Enable the HTTP01 challenge mechanism for this Issuer
-    http01: {}
+      name: letsencrypt-staging-private-key
+    http: {}
